# Talos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
aider/: .aider.conf.yml  README.md  verify.sh
claude-code/: README.md  anthropic_sdk.py  env.sh  verify.sh
cursor/: README.md  openai_sdk.py  talos.env  verify.sh
docs/: README.md  cursor.md  jetbrains.md  vscode.md  zed.md
docs/aider/: .aider.conf.yml  README.md
docs/claude-code/: README.md  env.sh
docs/vscode/: README.md  continue.config.json
docs/zed/: settings.json
examples/: README.md  node_openai_sdk.mjs  package.json  python_anthropic_sdk.py  python_openai_sdk.py
examples/go/: README.md  go.mod  main.go
examples/litellm/: README.md  config.yaml
examples/node/: README.md  openai_sdk.mjs
examples/python/: README.md  anthropic_sdk.py  openai_sdk.py
examples/vercel-ai-sdk/: README.md  index.ts  package.json
jetbrains/: README.md  talos.env  verify.sh
sdk/: .gitignore  README.md  pyproject.toml
sdk/talos_sdk/: __init__.py  __main__.py  cli.py  client.py  config.py
sdk/talos_sdk/setup/: __init__.py  aider.py  claude_code.py  common.py  cursor.py  jetbrains.py  paths.py  vscode.py  zed.py
sdk/tests/: test_client.py  test_setup.py
talos_worker/: __init__.py  __main__.py  client.py  config.py  dashboard.py  gpu.py  inference.py  pairing.py  state.py
tests/: fake_ollama.py
vscode/: README.md  continue.config.json  verify.sh
zed/: README.md  openai_sdk.py  settings.json  verify.sh
