[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "talos-worker"
version = "0.1.0"
description = "Talos GPU worker"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
talos-worker = "talos_worker.__main__:main"

[tool.setuptools]
packages = ["talos_worker"]