[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "talos-sdk"
version = "0.1.0"
description = "Python SDK and CLI for using talos-auto and the Talos network from your editor or code, without running a worker."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Talos" }]
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
talos = "talos_sdk.cli:main"

[tool.setuptools.packages.find]
include = ["talos_sdk*"]
